--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ dependencies {
 
     compile "io.github.resilience4j:resilience4j-all:1.1.0"
     compile "io.github.resilience4j:resilience4j-micrometer:1.1.0"
-
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
 }
 
