--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 
 management.endpoints.web.exposure.include=*
 spring.cache.cache-names=TEST_NAME,TEST_NAME_2
+
+redis.server.host=127.0.0.1
+redis.server.port=6379
